WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119507
Starting a momentum scroll while rubber banding can cause scrolling to jump back when the rubberband snaps
https://bugs.webkit.org/show_bug.cgi?id=119507
Summary
Starting a momentum scroll while rubber banding can cause scrolling to jump b...
Tim Horton
Reported
2013-08-05 19:01:00 PDT
Steps to Reproduce: 1. Open a tall page. 2. Flick into the left margin and downwards, in an inverted L shape. Expected: The vertical momentum should decelerate gracefully and then scrolling should stop. Actual: The vertical momentum decelerates gracefully and then the page scrolls vertically back to the vertical position it was in when the momentum phase began. This is a bit hard to describe and reproduce for the first time, but once you've done it once it's hard to stop. I have a fix.
Attachments
preliminary patch
(6.77 KB, patch)
2013-08-06 13:47 PDT
,
Tim Horton
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(1.95 KB, patch)
2013-12-17 22:34 PST
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-05 19:07:07 PDT
<
rdar://problem/14655893
>
Tim Horton
Comment 2
2013-08-06 13:47:04 PDT
Created
attachment 208216
[details]
preliminary patch preliminary patch, but it changes the behavior when you rubberband during the momentum phase too much (flick up off the top of the page with the patch applied vs. not, and you'll see the view rubberbands much further before it)
Build Bot
Comment 3
2013-08-21 11:05:59 PDT
Comment on
attachment 208216
[details]
preliminary patch
Attachment 208216
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/1525398
Beth Dakin
Comment 4
2013-12-17 22:34:08 PST
Created
attachment 219507
[details]
Patch Here is a different approach.
Beth Dakin
Comment 5
2013-12-18 12:56:07 PST
Thanks, Simon!
http://trac.webkit.org/changeset/160791
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug