Source/WebCore/platform/mac/ScrollElasticityController.mm
@@ -342,8 +342,6 @@ void ScrollElasticityController::snapRubberBandTimerFired()
             m_stretchScrollForce.setWidth(reboundDeltaForElasticDelta(newStretch.width()));
             m_stretchScrollForce.setHeight(reboundDeltaForElasticDelta(newStretch.height()));
         } else {
-            m_client->immediateScrollBy(m_origOrigin - m_client->absoluteScrollPosition());
-
             stopSnapRubberbandTimer();
             m_stretchScrollForce = FloatSize();
             m_startTime = 0;
